@@ -1,6 +1,8 @@
 Changes between 1.4.11 and 1.4.12.dev
 ==================================================
 
+- fix python2.4 support - for pre-AST interpreters re-introduce 
+  old way to find statements in exceptions (closes pytest issue 209)
 - add tox.ini to distribution
 
 Changes between 1.4.10 and 1.4.11
